// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea when align set to left functions as expected 1`] = `
<Textarea
  align="left"
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when align set to left when textarea is focused functions as expected 1`] = `
<Textarea
  align="left"
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when align set to left when textarea is focused when input looses focus renders as expected 1`] = `
<Textarea
  align="left"
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when align set to left when textarea is focused when value changed functions as expected 1`] = `
<Textarea
  align="left"
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value="baz"
    />
    <button
      className="frost-textarea-clear frost-fade-in"
      onAnimationEnd={[Function]}
      onClick={[Function]}
      tabIndex={-1}
    >
      <ClearSVG>
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </ClearSVG>
    </button>
  </div>
</Textarea>
`;

exports[`Textarea when align set to left when textarea is focused when value changed when clear button is pressed functions as expected 1`] = `
<Textarea
  align="left"
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
    <button
      className="frost-textarea-clear frost-fade-out"
      onAnimationEnd={[Function]}
      onClick={[Function]}
      tabIndex={-1}
    >
      <ClearSVG>
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </ClearSVG>
    </button>
  </div>
</Textarea>
`;

exports[`Textarea when align set to left when textarea is focused when value changed when clear button is pressed when clear button fade out animation has completed functions as expected 1`] = `
<Textarea
  align="left"
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when align set to right functions as expected 1`] = `
<Textarea
  align="right"
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input frost-textarea-align-right"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when align set to right when textarea is focused functions as expected 1`] = `
<Textarea
  align="right"
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input frost-textarea-align-right"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when align set to right when textarea is focused when input looses focus renders as expected 1`] = `
<Textarea
  align="right"
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input frost-textarea-align-right"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when align set to right when textarea is focused when value changed functions as expected 1`] = `
<Textarea
  align="right"
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input frost-textarea-align-right"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value="baz"
    />
    <button
      className="frost-textarea-clear frost-fade-in"
      onAnimationEnd={[Function]}
      onClick={[Function]}
      tabIndex={-1}
    >
      <ClearSVG>
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </ClearSVG>
    </button>
  </div>
</Textarea>
`;

exports[`Textarea when align set to right when textarea is focused when value changed when clear button is pressed functions as expected 1`] = `
<Textarea
  align="right"
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input frost-textarea-align-right"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
    <button
      className="frost-textarea-clear frost-fade-out"
      onAnimationEnd={[Function]}
      onClick={[Function]}
      tabIndex={-1}
    >
      <ClearSVG>
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </ClearSVG>
    </button>
  </div>
</Textarea>
`;

exports[`Textarea when align set to right when textarea is focused when value changed when clear button is pressed when clear button fade out animation has completed functions as expected 1`] = `
<Textarea
  align="right"
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input frost-textarea-align-right"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when class name passed in functions as expected 1`] = `
<Textarea
  className="foobar"
>
  <div
    className="frost-textarea foobar"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when class name passed in when textarea is focused functions as expected 1`] = `
<Textarea
  className="foobar"
>
  <div
    className="frost-textarea foobar"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when class name passed in when textarea is focused when input looses focus renders as expected 1`] = `
<Textarea
  className="foobar"
>
  <div
    className="frost-textarea foobar"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when class name passed in when textarea is focused when value changed functions as expected 1`] = `
<Textarea
  className="foobar"
>
  <div
    className="frost-textarea foobar"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value="baz"
    />
    <button
      className="frost-textarea-clear frost-fade-in"
      onAnimationEnd={[Function]}
      onClick={[Function]}
      tabIndex={-1}
    >
      <ClearSVG>
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </ClearSVG>
    </button>
  </div>
</Textarea>
`;

exports[`Textarea when class name passed in when textarea is focused when value changed when clear button is pressed functions as expected 1`] = `
<Textarea
  className="foobar"
>
  <div
    className="frost-textarea foobar"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
    <button
      className="frost-textarea-clear frost-fade-out"
      onAnimationEnd={[Function]}
      onClick={[Function]}
      tabIndex={-1}
    >
      <ClearSVG>
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </ClearSVG>
    </button>
  </div>
</Textarea>
`;

exports[`Textarea when class name passed in when textarea is focused when value changed when clear button is pressed when clear button fade out animation has completed functions as expected 1`] = `
<Textarea
  className="foobar"
>
  <div
    className="frost-textarea foobar"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when disabled set to false functions as expected 1`] = `
<Textarea
  disabled={false}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when disabled set to false when textarea is focused functions as expected 1`] = `
<Textarea
  disabled={false}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when disabled set to false when textarea is focused when input looses focus renders as expected 1`] = `
<Textarea
  disabled={false}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when disabled set to false when textarea is focused when value changed functions as expected 1`] = `
<Textarea
  disabled={false}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value="baz"
    />
    <button
      className="frost-textarea-clear frost-fade-in"
      onAnimationEnd={[Function]}
      onClick={[Function]}
      tabIndex={-1}
    >
      <ClearSVG>
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </ClearSVG>
    </button>
  </div>
</Textarea>
`;

exports[`Textarea when disabled set to false when textarea is focused when value changed when clear button is pressed functions as expected 1`] = `
<Textarea
  disabled={false}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
    <button
      className="frost-textarea-clear frost-fade-out"
      onAnimationEnd={[Function]}
      onClick={[Function]}
      tabIndex={-1}
    >
      <ClearSVG>
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </ClearSVG>
    </button>
  </div>
</Textarea>
`;

exports[`Textarea when disabled set to false when textarea is focused when value changed when clear button is pressed when clear button fade out animation has completed functions as expected 1`] = `
<Textarea
  disabled={false}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when disabled set to true functions as expected 1`] = `
<Textarea
  disabled={true}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when disabled set to true when textarea is focused functions as expected 1`] = `
<Textarea
  disabled={true}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when disabled set to true when textarea is focused when input looses focus renders as expected 1`] = `
<Textarea
  disabled={true}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when error set to false functions as expected 1`] = `
<Textarea
  error={false}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when error set to false when textarea is focused functions as expected 1`] = `
<Textarea
  error={false}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when error set to false when textarea is focused when input looses focus renders as expected 1`] = `
<Textarea
  error={false}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when error set to false when textarea is focused when value changed functions as expected 1`] = `
<Textarea
  error={false}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value="baz"
    />
    <button
      className="frost-textarea-clear frost-fade-in"
      onAnimationEnd={[Function]}
      onClick={[Function]}
      tabIndex={-1}
    >
      <ClearSVG>
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </ClearSVG>
    </button>
  </div>
</Textarea>
`;

exports[`Textarea when error set to false when textarea is focused when value changed when clear button is pressed functions as expected 1`] = `
<Textarea
  error={false}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
    <button
      className="frost-textarea-clear frost-fade-out"
      onAnimationEnd={[Function]}
      onClick={[Function]}
      tabIndex={-1}
    >
      <ClearSVG>
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </ClearSVG>
    </button>
  </div>
</Textarea>
`;

exports[`Textarea when error set to false when textarea is focused when value changed when clear button is pressed when clear button fade out animation has completed functions as expected 1`] = `
<Textarea
  error={false}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when error set to true functions as expected 1`] = `
<Textarea
  error={true}
>
  <div
    className="frost-textarea frost-textarea-error"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when error set to true when textarea is focused functions as expected 1`] = `
<Textarea
  error={true}
>
  <div
    className="frost-textarea frost-textarea-error"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when error set to true when textarea is focused when input looses focus renders as expected 1`] = `
<Textarea
  error={true}
>
  <div
    className="frost-textarea frost-textarea-error"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when error set to true when textarea is focused when value changed functions as expected 1`] = `
<Textarea
  error={true}
>
  <div
    className="frost-textarea frost-textarea-error"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value="baz"
    />
    <button
      className="frost-textarea-clear frost-fade-in"
      onAnimationEnd={[Function]}
      onClick={[Function]}
      tabIndex={-1}
    >
      <ClearSVG>
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </ClearSVG>
    </button>
  </div>
</Textarea>
`;

exports[`Textarea when error set to true when textarea is focused when value changed when clear button is pressed functions as expected 1`] = `
<Textarea
  error={true}
>
  <div
    className="frost-textarea frost-textarea-error"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
    <button
      className="frost-textarea-clear frost-fade-out"
      onAnimationEnd={[Function]}
      onClick={[Function]}
      tabIndex={-1}
    >
      <ClearSVG>
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </ClearSVG>
    </button>
  </div>
</Textarea>
`;

exports[`Textarea when error set to true when textarea is focused when value changed when clear button is pressed when clear button fade out animation has completed functions as expected 1`] = `
<Textarea
  error={true}
>
  <div
    className="frost-textarea frost-textarea-error"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when maximum length set to 1 functions as expected 1`] = `
<Textarea
  maxLength={1}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      maxLength={1}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when maximum length set to 1 when textarea is focused functions as expected 1`] = `
<Textarea
  maxLength={1}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      maxLength={1}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when maximum length set to 1 when textarea is focused when input looses focus renders as expected 1`] = `
<Textarea
  maxLength={1}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      maxLength={1}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when maximum length set to 1 when textarea is focused when value changed functions as expected 1`] = `
<Textarea
  maxLength={1}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      maxLength={1}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value="b"
    />
    <button
      className="frost-textarea-clear frost-fade-in"
      onAnimationEnd={[Function]}
      onClick={[Function]}
      tabIndex={-1}
    >
      <ClearSVG>
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </ClearSVG>
    </button>
  </div>
</Textarea>
`;

exports[`Textarea when maximum length set to 1 when textarea is focused when value changed when clear button is pressed functions as expected 1`] = `
<Textarea
  maxLength={1}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      maxLength={1}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
    <button
      className="frost-textarea-clear frost-fade-out"
      onAnimationEnd={[Function]}
      onClick={[Function]}
      tabIndex={-1}
    >
      <ClearSVG>
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </ClearSVG>
    </button>
  </div>
</Textarea>
`;

exports[`Textarea when maximum length set to 1 when textarea is focused when value changed when clear button is pressed when clear button fade out animation has completed functions as expected 1`] = `
<Textarea
  maxLength={1}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      maxLength={1}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when minimum length set to 1 functions as expected 1`] = `
<Textarea
  minLength={1}
>
  <div
    className="frost-textarea frost-textarea-error"
  >
    <textarea
      className="frost-textarea-input"
      minLength={1}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when minimum length set to 1 when textarea is focused functions as expected 1`] = `
<Textarea
  minLength={1}
>
  <div
    className="frost-textarea frost-textarea-error"
  >
    <textarea
      className="frost-textarea-input"
      minLength={1}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when minimum length set to 1 when textarea is focused when input looses focus renders as expected 1`] = `
<Textarea
  minLength={1}
>
  <div
    className="frost-textarea frost-textarea-error"
  >
    <textarea
      className="frost-textarea-input"
      minLength={1}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when minimum length set to 1 when textarea is focused when value changed functions as expected 1`] = `
<Textarea
  minLength={1}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      minLength={1}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value="baz"
    />
    <button
      className="frost-textarea-clear frost-fade-in"
      onAnimationEnd={[Function]}
      onClick={[Function]}
      tabIndex={-1}
    >
      <ClearSVG>
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </ClearSVG>
    </button>
  </div>
</Textarea>
`;

exports[`Textarea when minimum length set to 1 when textarea is focused when value changed when clear button is pressed functions as expected 1`] = `
<Textarea
  minLength={1}
>
  <div
    className="frost-textarea frost-textarea-error"
  >
    <textarea
      className="frost-textarea-input"
      minLength={1}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
    <button
      className="frost-textarea-clear frost-fade-out"
      onAnimationEnd={[Function]}
      onClick={[Function]}
      tabIndex={-1}
    >
      <ClearSVG>
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </ClearSVG>
    </button>
  </div>
</Textarea>
`;

exports[`Textarea when minimum length set to 1 when textarea is focused when value changed when clear button is pressed when clear button fade out animation has completed functions as expected 1`] = `
<Textarea
  minLength={1}
>
  <div
    className="frost-textarea frost-textarea-error"
  >
    <textarea
      className="frost-textarea-input"
      minLength={1}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when no properties passed in functions as expected 1`] = `
<Textarea>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when no properties passed in when textarea is focused functions as expected 1`] = `
<Textarea>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when no properties passed in when textarea is focused when input looses focus renders as expected 1`] = `
<Textarea>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when no properties passed in when textarea is focused when value changed functions as expected 1`] = `
<Textarea>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value="baz"
    />
    <button
      className="frost-textarea-clear frost-fade-in"
      onAnimationEnd={[Function]}
      onClick={[Function]}
      tabIndex={-1}
    >
      <ClearSVG>
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </ClearSVG>
    </button>
  </div>
</Textarea>
`;

exports[`Textarea when no properties passed in when textarea is focused when value changed when clear button is pressed functions as expected 1`] = `
<Textarea>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
    <button
      className="frost-textarea-clear frost-fade-out"
      onAnimationEnd={[Function]}
      onClick={[Function]}
      tabIndex={-1}
    >
      <ClearSVG>
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </ClearSVG>
    </button>
  </div>
</Textarea>
`;

exports[`Textarea when no properties passed in when textarea is focused when value changed when clear button is pressed when clear button fade out animation has completed functions as expected 1`] = `
<Textarea>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when onChange set functions as expected 1`] = `
<Textarea
  onChange={[MockFunction]}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when onChange set when textarea is focused functions as expected 1`] = `
<Textarea
  onChange={[MockFunction]}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when onChange set when textarea is focused when input looses focus renders as expected 1`] = `
<Textarea
  onChange={[MockFunction]}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when onChange set when textarea is focused when value changed functions as expected 1`] = `
<Textarea
  onChange={
    [MockFunction] {
      "calls": Array [
        Array [
          "baz",
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value="baz"
    />
    <button
      className="frost-textarea-clear frost-fade-in"
      onAnimationEnd={[Function]}
      onClick={[Function]}
      tabIndex={-1}
    >
      <ClearSVG>
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </ClearSVG>
    </button>
  </div>
</Textarea>
`;

exports[`Textarea when onChange set when textarea is focused when value changed when clear button is pressed functions as expected 1`] = `
<Textarea
  onChange={
    [MockFunction] {
      "calls": Array [
        Array [
          "baz",
        ],
        Array [
          null,
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
    <button
      className="frost-textarea-clear frost-fade-out"
      onAnimationEnd={[Function]}
      onClick={[Function]}
      tabIndex={-1}
    >
      <ClearSVG>
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </ClearSVG>
    </button>
  </div>
</Textarea>
`;

exports[`Textarea when onChange set when textarea is focused when value changed when clear button is pressed when clear button fade out animation has completed functions as expected 1`] = `
<Textarea
  onChange={
    [MockFunction] {
      "calls": Array [
        Array [
          "baz",
        ],
        Array [
          null,
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when readOnly set to false functions as expected 1`] = `
<Textarea
  readOnly={false}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when readOnly set to false when textarea is focused functions as expected 1`] = `
<Textarea
  readOnly={false}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when readOnly set to false when textarea is focused when input looses focus renders as expected 1`] = `
<Textarea
  readOnly={false}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when readOnly set to false when textarea is focused when value changed functions as expected 1`] = `
<Textarea
  readOnly={false}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      value="baz"
    />
    <button
      className="frost-textarea-clear frost-fade-in"
      onAnimationEnd={[Function]}
      onClick={[Function]}
      tabIndex={-1}
    >
      <ClearSVG>
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </ClearSVG>
    </button>
  </div>
</Textarea>
`;

exports[`Textarea when readOnly set to false when textarea is focused when value changed when clear button is pressed functions as expected 1`] = `
<Textarea
  readOnly={false}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      value=""
    />
    <button
      className="frost-textarea-clear frost-fade-out"
      onAnimationEnd={[Function]}
      onClick={[Function]}
      tabIndex={-1}
    >
      <ClearSVG>
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </ClearSVG>
    </button>
  </div>
</Textarea>
`;

exports[`Textarea when readOnly set to false when textarea is focused when value changed when clear button is pressed when clear button fade out animation has completed functions as expected 1`] = `
<Textarea
  readOnly={false}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when readOnly set to true functions as expected 1`] = `
<Textarea
  readOnly={true}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={true}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when readOnly set to true when textarea is focused functions as expected 1`] = `
<Textarea
  readOnly={true}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={true}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when readOnly set to true when textarea is focused when input looses focus renders as expected 1`] = `
<Textarea
  readOnly={true}
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={true}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when value set to empty string functions as expected 1`] = `
<Textarea
  value=""
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when value set to empty string when textarea is focused functions as expected 1`] = `
<Textarea
  value=""
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when value set to empty string when textarea is focused when input looses focus renders as expected 1`] = `
<Textarea
  value=""
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when value set to empty string when textarea is focused when value changed functions as expected 1`] = `
<Textarea
  value=""
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value="baz"
    />
    <button
      className="frost-textarea-clear frost-fade-in"
      onAnimationEnd={[Function]}
      onClick={[Function]}
      tabIndex={-1}
    >
      <ClearSVG>
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </ClearSVG>
    </button>
  </div>
</Textarea>
`;

exports[`Textarea when value set to empty string when textarea is focused when value changed when clear button is pressed functions as expected 1`] = `
<Textarea
  value=""
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
    <button
      className="frost-textarea-clear frost-fade-out"
      onAnimationEnd={[Function]}
      onClick={[Function]}
      tabIndex={-1}
    >
      <ClearSVG>
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </ClearSVG>
    </button>
  </div>
</Textarea>
`;

exports[`Textarea when value set to empty string when textarea is focused when value changed when clear button is pressed when clear button fade out animation has completed functions as expected 1`] = `
<Textarea
  value=""
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;

exports[`Textarea when value set to non-empty string functions as expected 1`] = `
<Textarea
  value="foobar"
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value="foobar"
    />
  </div>
</Textarea>
`;

exports[`Textarea when value set to non-empty string when textarea is focused functions as expected 1`] = `
<Textarea
  value="foobar"
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value="foobar"
    />
    <button
      className="frost-textarea-clear frost-fade-in"
      onAnimationEnd={[Function]}
      onClick={[Function]}
      tabIndex={-1}
    >
      <ClearSVG>
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </ClearSVG>
    </button>
  </div>
</Textarea>
`;

exports[`Textarea when value set to non-empty string when textarea is focused when clear button fade in animation has completed functions as expected 1`] = `
<Textarea
  value="foobar"
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value="foobar"
    />
    <button
      className="frost-textarea-clear frost-fade-in"
      onAnimationEnd={[Function]}
      onClick={[Function]}
      tabIndex={-1}
    >
      <ClearSVG>
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </ClearSVG>
    </button>
  </div>
</Textarea>
`;

exports[`Textarea when value set to non-empty string when textarea is focused when input looses focus renders as expected 1`] = `
<Textarea
  value="foobar"
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value="foobar"
    />
    <button
      className="frost-textarea-clear frost-fade-out"
      onAnimationEnd={[Function]}
      onClick={[Function]}
      tabIndex={-1}
    >
      <ClearSVG>
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </ClearSVG>
    </button>
  </div>
</Textarea>
`;

exports[`Textarea when value set to non-empty string when textarea is focused when input looses focus when clear button fade out animation has completed functions as expected 1`] = `
<Textarea
  value="foobar"
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value="foobar"
    />
  </div>
</Textarea>
`;

exports[`Textarea when value set to non-empty string when textarea is focused when value changed functions as expected 1`] = `
<Textarea
  value="foobar"
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value="baz"
    />
    <button
      className="frost-textarea-clear frost-fade-in"
      onAnimationEnd={[Function]}
      onClick={[Function]}
      tabIndex={-1}
    >
      <ClearSVG>
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </ClearSVG>
    </button>
  </div>
</Textarea>
`;

exports[`Textarea when value set to non-empty string when textarea is focused when value changed when clear button is pressed functions as expected 1`] = `
<Textarea
  value="foobar"
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
    <button
      className="frost-textarea-clear frost-fade-out"
      onAnimationEnd={[Function]}
      onClick={[Function]}
      tabIndex={-1}
    >
      <ClearSVG>
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </ClearSVG>
    </button>
  </div>
</Textarea>
`;

exports[`Textarea when value set to non-empty string when textarea is focused when value changed when clear button is pressed when clear button fade out animation has completed functions as expected 1`] = `
<Textarea
  value="foobar"
>
  <div
    className="frost-textarea"
  >
    <textarea
      className="frost-textarea-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
  </div>
</Textarea>
`;
